Update and rename .example.env to .env

--- a/.env
+++ b/.env
@@ -20,10 +20,10 @@
 ##########################################################################################################
 
 # token do(s) bot(s) abaixo (separe com espaço caso adicione mais de 1 token)
-TOKEN=''
+TOKEN='MTE4MTY2NDg5ODM2Nzg5MzU1NA.GryR85.uft67862iQ9lLeiWueP7SD6idu6_cPQjH8FtbM'
 
 # Prefixo padrão do bot
-DEFAULT_PREFIX='!!'
+DEFAULT_PREFIX='!'
 
 # Baixar automaticamente uma lista de servidores lavalink públicos.
 # Caso hospede na squarecloud/discloud/repl.it/render em planos gratuitos (ou qualquer outra hospedagem com cpu/ram/tráfego limitada)
@@ -31,7 +31,7 @@ DEFAULT_PREFIX='!!'
 AUTO_DOWNLOAD_LAVALINK_SERVERLIST=false
 
 # URL do mongoDB para database (caso não seja colocado, será usado database em arquivo .json). Veja como obter: https://github.com/zRitsu/MuseHeart-MusicBot/wiki/MongoDB-Tutorial"
-MONGO=''
+MONGO='mongodb+srv://rip_Blaster:k4O3DAz1CBCt0o8J@unnamedbot.2y3xom1.mongodb.net/'
 
 # Salvar dados de sessões dos players ativos no mongodb (Campo MONGO deve estar configurado).
 # Caso esteja false os dados serão salvos na database local (json).
@@ -46,8 +46,8 @@ SENSITIVE_INFO_WARN=true
 
 # Usar key própria ao invés de uma key de visitante obtida automaticamente.
 # Caso tenha duvida de como obter os dados para os campos abaixo, veja o tutorial: https://github.com/zRitsu/MuseHeart-MusicBot/wiki/Spotify-Keys
-SPOTIFY_CLIENT_ID=''
-SPOTIFY_CLIENT_SECRET=''
+SPOTIFY_CLIENT_ID='7611c88c7ba1442e83eb0b25d6397829'
+SPOTIFY_CLIENT_SECRET='77f72bd20bb24803a78366b64b206870'
 
 ###############
 ### Intents ###
@@ -77,7 +77,7 @@ MESSAGE_CONTENT_INTENT='true'
 ##############################
 
 # ID de usuário pra lista de owner/dono do bot, caso use mais de 1 id separe por || (Qualquer id que for colocado na lista vai permitir o membro ter acesso total ao bot, tome cuidado!).
-OWNER_IDS=''
+OWNER_IDS='849654177336655954'
 
 # Forçar finalizar execução do bot ao dar erro 429 (too many requests)
 KILL_ON_429=true
@@ -91,7 +91,7 @@ ENABLE_COMMANDS_COOLDOWN=true
 COMMAND_LOG=false
 
 # invite do servidor de suporte (exibido no comando about e nos erros dos comandos).
-SUPPORT_SERVER=''
+SUPPORT_SERVER='https://discord.gg/uQ86EhjDmW'
 
 # Sincronizar comandos automaticamente ao ligar o bot.
 AUTO_SYNC_COMMANDS=true
