--- a/.example.env
+++ b/.example.env
@@ -3,14 +3,14 @@
 ### Caso use espaço em algum valor, sempre deixe o valor entre aspas! ###
 #########################################################################
 
-##########################################################################################################
+#########################################################j#################################################
 ### TOKEN do bot (Obrigatório)                                                                         ###
 ### Nota: Você pode incluir bots extras apenas adicionando mais tokens no value (separando com espaço) ###
 ### ou criando uma config com um nome qualquer (com apenas  letras/números/underline) e no valor       ###
 ### coloque o(s) token(s) (separado com espaços caso inclua mais de 1 no value).                       ###
 ###                                                                                                    ###
 ### Exemplos:                                                                                          ###
-### TOKEN='bbbbbbbbbcccDASDSAdeefff.gggghhhhiiii'                                                      ###
+### TOKEN='bbbbbbbbbcccDASDSAdeefff.gggghhhhiii'                                                      ###
 ### MYBOT='asdsadbbc2cDASDSAdeef3ff.adew234411ax'                                                      ###
 ###                                                                                                    ###
 ### Exemplos com múltiplos tokens no value (separando com espaço):                                     ###
